typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNamesWithStaticProperty.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            66,
        ),
        hi: BytePos(
            67,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNamesWithStaticProperty.ts:4:10
  |
4 |     get [C.staticProp]() {
  |          ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            126,
        ),
        hi: BytePos(
            127,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNamesWithStaticProperty.ts:7:10
  |
7 |     set [C.staticProp](x: string) {
  |          ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            186,
        ),
        hi: BytePos(
            187,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNamesWithStaticProperty.ts:10:6
   |
10 |     [C.staticProp]() { }
   |      ^

